--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<html>
 <head>
     <title>Home | TheModCraft</title>
     <meta charset="utf-8">
@@ -114,6 +114,6 @@
         </div>
     </section>
 
-
+</main>
 </body>
 </html>
