--- a/index.html
+++ b/index.html
@@ -27,29 +27,6 @@
 </head>
 <body>
 <main class="Main">
-    <div class="smsm-wrapper  draggable"  id="draggableElement">
-        <div class="SMSM_menu">
-            <div class="SMSM_toggle" onclick="toggleMenu()">
-                <i class="fa-solid fa-share-nodes"></i>
-            </div>
-            <ul class="SMSM_icons">
-                <li style="--i:3;" class="SMSM_bubble"><a href="#"><i class="fab fa-youtube"></i></a></li>
-                <li style="--i:3;" class="SMSM_bubble"><a href="#"><i class="fab fa-facebook"></i></a></li>
-                <li style="--i:3;" class="SMSM_bubble"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li style="--i:3;" class="SMSM_bubble"><a href="#"><i class="fab fa-github"></i></a></li>
-                <li style="--i:3;" class="SMSM_bubble"><a href="#"><i class="fa-brands fa-apple"></i></a></li>
-                <li style="--i:3;" class="SMSM_bubble"><a href="#"><i class="fa-brands fa-discord"></i></a></li>
-                <li style="--i:3;" class="SMSM_bubble"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                <li style="--i:3;" class="SMSM_bubble"><a href="#"><i class="fa-brands fa-stack-overflow"></i></a></li>
-            </ul>
-        </div>
-    </div>
-    <script>
-        function toggleMenu() {
-            var menu = document.querySelector('.SMSM_menu');
-            menu.classList.toggle('active');
-        }
-    </script>
     <section class="Header" >
         <div class="header_bar">
             <nav class="ac-globalnav">
@@ -62,16 +39,16 @@
                             <a class="ac-gn-link ac-gn-link-home" href="index.html">Home</a>
                         </li>
                         <li class="ac-gn-item ac-gn-item-menu ac-gn-Music">
-                            <a class="ac-gn-link ac-gn-link-music" href="launchpad.html">Launchpad Effects</a>
+                            <a class="ac-gn-link ac-gn-link-music" href=""></a>
                         </li>
                         <li class="ac-gn-item ac-gn-item-menu ac-gn-Gaming">
-                            <a class="ac-gn-link ac-gn-link-gaming" href="gaming.html">Gaming</a>
+                            <a class="ac-gn-link ac-gn-link-gaming" href=""></a>
                         </li>
                         <li class="ac-gn-item ac-gn-item-menu ac-gn-drone">
-                            <a class="ac-gn-link ac-gn-link-drone" href="drone.html">Drone</a>
+                            <a class="ac-gn-link ac-gn-link-drone" href=""></a>
                         </li>
                         <li class="ac-gn-item ac-gn-item-menu ac-gn-programming">
-                            <a class="ac-gn-link ac-gn-link-programming" href="programming.html">Programming</a>
+                            <a class="ac-gn-link ac-gn-link-programming" href=""></a>
                         </li>
                     </ul>
                 </div>
@@ -86,16 +63,16 @@
                             <a class="ac-dn-link ac-dn-link-home" href="index.html">Home</a>
                         </li>
                         <li class="ac-dn-item ac-dn-item-menu ac-dn-Music">
-                            <a class="ac-dn-link ac-dn-link-music" href="launchpad.html">Launchpad Effects</a>
+                            <a class="ac-dn-link ac-dn-link-music" href=""></a>
                         </li>
                         <li class="ac-dn-item ac-dn-item-menu ac-dn-Gaming">
-                            <a class="ac-dn-link ac-dn-link-gaming" href="gaming.html">Gaming</a>
+                            <a class="ac-dn-link ac-dn-link-gaming" href=""></a>
                         </li>
                         <li class="ac-dn-item ac-dn-item-menu ac-dn-drone">
-                            <a class="ac-dn-link ac-dn-link-drone" href="drone.html">Drone</a>
+                            <a class="ac-dn-link ac-dn-link-drone" href=""></a>
                         </li>
                         <li class="ac-dn-item ac-dn-item-menu ac-dn-programming">
-                            <a class="ac-dn-link ac-dn-link-programming" href="programming.html">Programming</a>
+                            <a class="ac-dn-link ac-dn-link-programming" href=""></a>
                         </li>
                     </ul>
                 </div>
