--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta property="og:type" content="website">
     <link rel="shortcut icon" href="images/TMC_Logo.webp">
     <link rel="stylesheet" type="text/css" href="css/style_index.css" />
+    <link rel="stylesheet" type="text/css" href="css/fix.css" />
     <link rel="stylesheet" type="text/css" href="css/style_navbar.css" />
     <link rel="stylesheet" type="text/css" href="css/style_footer.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
